# ktanks

./: .gitattributes  CMakeLists.txt  readme.md
assets/shaders/: simple.frag  simple.vert  vector.frag  vector.vert
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/libspng/: CMakeLists.txt
src/: main.cpp
src/ktanks/: Game.cpp  Game.h  Tanks.cpp  Tanks.h
src/ktanks/base/: IScreen.cpp  IScreen.h  IWidget.cpp  IWidget.h
src/ktanks/core/: Constants.h  Entity.cpp  Entity.h  IEntity.h  IObject.h  IScreen.h  IWidget.h  Object.cpp  Object.h  TankType.h
src/ktanks/core/constants/: TankData.h
src/ktanks/core/data/: BlockData.h  GuiData.h  TerrainData.h
src/ktanks/data/: Map.cpp  Map.h  TerrainSpriteList.h
src/ktanks/entity/: Player.h  Tank.cpp  Tank.h
src/ktanks/game/: Game.cpp  Game.h
src/ktanks/game/models/: Level.cpp  Level.h  LevelLayer.cpp  LevelLayer.h
src/ktanks/game/models/entity/: Sandbag.cpp  Sandbag.h  Tank.cpp  Tank.h  Tree.cpp  Tree.h  Wall.cpp  Wall.h
src/ktanks/game/screen/: EditorScreen.cpp  EditorScreen.h  MainScreen.cpp  MainScreen.h  PlayScreen.cpp  PlayScreen.h  SettingsScreen.cpp  SettingsScreen.h
src/ktanks/graphics/: Atlas.cpp  Atlas.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  Vertex.cpp  Vertex.h
src/ktanks/graphics/sprite_data/: TankSprites.h  TerrainSprites.h
src/ktanks/models/: Level.cpp  Level.h  LevelMap.h  Map.cpp  Map.h
src/ktanks/models/entity/: Tank.cpp  Tank.h
src/ktanks/renderer/: GameRenderer.cpp  GameRenderer.h  Renderer.cpp  Renderer.h  UIRenderer.cpp  UIRenderer.h
src/ktanks/screen/: EditorScreen.cpp  EditorScreen.h  MainScreen.cpp  MainScreen.h  PlayScreen.cpp  PlayScreen.h  SetupScreen.cpp  SetupScreen.h
src/ktanks/ui/: Button.cpp  Button.h  Container.cpp  Container.h  Frame.cpp  Frame.h  Image.cpp  Image.h  Input.cpp  Input.h  Label.cpp  Label.h  List.cpp  List.h  ScrollContainer.cpp  ScrollContainer.h
src/ktanks/ui/editor/: TileButton.cpp  TileButton.h  TilePalette.cpp  TilePalette.h
src/ktanks/ui/layout/: BoxLayout.cpp  BoxLayout.h  ScrollLayout.cpp  ScrollLayout.h
src/ktanks/utils/: AssetManager.cpp  AssetManager.h  AssetsManager.cpp  AssetsManager.h  InputManager.cpp  InputManager.h  Locator.cpp  Locator.h  Log.cpp  Log.h
src/ktanks/window/: Event.h  Window.cpp  Window.h
